--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@ shippable
 # Pycharm
 .idea
 
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 # Vim
 *~
 *.swp
@@ -27,16 +34,38 @@ shippable
 # npm
 node_modules/
 
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# pyenv
+.python-version
+
 # Campass
 .sass-cache
 
 # Local
 *.box
 .env
+.env
+.venv
+env/
+venv/
 .vagrant
-db.sqlite3
-local_settings.py
-staticfiles
-celerybeat-schedule
-results.db
-emails
