--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
   directory: "/" # Location of package manifests
   schedule:
     interval: "weekly"
+  open-pull-requests-limit: 10
+  reviewers:
+    - SecyWecy
+    - mburumaxwell
