Added dependabot updates for github actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,11 @@ updates:
   reviewers:
     - SecyWecy
     - mburumaxwell
+- package-ecosystem: "github-actions" # See documentation for possible values
+  directory: "/" # Location of package manifests
+  schedule:
+    interval: "weekly"
+    time: "02:00"
+  reviewers:
+    - SecyWecy
+    - mburumaxwell
