--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -10,17 +10,16 @@ on:
       - docs/**
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
+  Build:
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version:
-          [
-            "3.8",
-            "3.9",
-            "3.10",
-            "pypy-3.8",
-          ]
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "pypy-3.8"
 
     steps:
       - uses: actions/checkout@v4
