--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,15 +8,16 @@ updates:
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
+      time: "02:00"
+    open-pull-requests-limit: 20
     reviewers:
-      - sethonyango
       - mburumaxwell
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       time: "02:00"
+    open-pull-requests-limit: 10
     reviewers:
-      - sethonyango
       - mburumaxwell
